[build-system]
requires = ["setuptools >= 42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/rcmodel/version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version" #Otherwise PYPI doesnt work

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
