[build-system]
#requires = ["poetry-core", "setuptools >= 42", "wheel", "setuptools_scm[toml]>=6.0"]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
bumb = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.poetry]
name = "rcmodel"
version = "0.0.0"  # version dynamically updated
description = "3R2C Resistor Capacitor Model for simplified building thermal simulation"
authors = ["Ben Fourcin"]
readme = "README.md"
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "^1.12.1"
torchdiffeq = "^0.2.3"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
pandas = "^1.5.1"
xitorch = "^0.3.0"
filelock = "^3.8.0"
gym = "^0.25.2"
tqdm = "^4.64.1"
ray = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-lazy-fixture = "^0.6.3"
