[build-system]
#requires = ["poetry-core", "setuptools >= 42", "wheel", "setuptools_scm[toml]>=6.0"]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}
"""

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.poetry]
name = "rcmodel"
version = "0.0.0"  # version dynamically updated
description = "3R2C Resistor Capacitor Model for simplified building thermal simulation"
authors = ["Ben Fourcin"]
readme = "README.md"
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"
torchdiffeq = "^0.2.3"
numpy = "^1.23.3"
matplotlib = "^3.6.1"
pandas = "^1.5.1"
xitorch = "^0.3.0"
filelock = "^3.8.0"
tqdm = "^4.64.1"
ray = {extras = ["rllib"], version = "^2.4.0"}
dill = "^0.3.6"
gymnasium = "^0.26.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-lazy-fixture = "^0.6.3"
