[metadata]
name = rcmodel
version = 0.0.1
author = Ben Fourcin
author_email = bjjf201@exeter.ac.uk
description = 3R2C Resistor Capacitor Model for simplified building thermal simulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BFourcin/rcmodel
project_urls =
    Bug Tracker = https://github.com/BFourcin/rcmodel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8

[options.packages.find]
where = src
